# api/storage/api-docs/api-docs.json
@@ -1,11 +1,15 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Título de tu API",
-        "description": "Permite a los desarrolladores gestionar un emocionante entorno de batallas de cartas. Los jugadores pueden crear barajas personalizables, participar en competiciones en tiempo real y subir de nivel para desbloquear nuevas cartas y habilidades. La API ofrece endpoints intuitivos para la gestión de usuarios, barajas y estadísticas, facilitando la integración de la experiencia de juego en diversas aplicaciones.",
+        "title": "API - Desarrollo Web",
+        "description": "Permite a los desarrolladores gestionar un emocionante entorno de batallas de cartas. Los jugadores pueden crear barajas personalizables, participar en competiciones en tiempo real y subir de nivel para desbloquear nuevas cartas y habilidades. La API ofrece endpoints intuitivos para la gestión de usuarios, barajas y estadísticas, facilitando la integración de la experiencia de juego en diversas aplicaciones. Para más información, visita [mi GitHub](https://github.com/Caliz17/pj_desarrollo_web_back.git).",
         "contact": {
             "name": "Isaac Caliz",
             "email": "ecaliz@miumg.edu.gt"
+        },
+        "license": {
+            "name": "MIT",
+            "url": "https://opensource.org/licenses/MIT"
         },
         "version": "1.0.0"
     },
@@ -42,7 +46,12 @@
                     "400": {
                         "description": "Ocurrió un error al obtener las cartas"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
             },
             "post": {
                 "tags": [
@@ -519,13 +528,13 @@
                 }
             }
         },
-        "/api/register": {
+        "/api/register-user": {
             "post": {
                 "tags": [
                     "Usuarios"
                 ],
                 "summary": "Registra un nuevo usuario",
-                "operationId": "0426d0c9ac033a52c2f63fb116bd6689",
+                "operationId": "e2b6c565afe1a268d0e964c6a07e2cad",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -630,13 +639,13 @@
                 }
             }
         },
-        "/api/login": {
+        "/api/login-user": {
             "post": {
                 "tags": [
                     "Usuarios"
                 ],
                 "summary": "Inicia sesión de un usuario",
-                "operationId": "10921d1fbcab624d802dc52025cb39a8",
+                "operationId": "467f92676c372d56a0468f7f732ec2ba",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -827,13 +836,13 @@
                 }
             }
         },
-        "/api/user/profile": {
+        "/api/user-profile": {
             "get": {
                 "tags": [
                     "Usuarios"
                 ],
                 "summary": "Obtener el perfil de usuario autenticado",
-                "operationId": "8429e84c77aea7104734e828407cd46e",
+                "operationId": "1d381745bb367a1879e4f98aa05e6b75",
                 "responses": {
                     "200": {
                         "description": "Perfil de usuario recuperado correctamente",
@@ -886,13 +895,13 @@
                 }
             }
         },
-        "/api/login/google": {
+        "/api/login/-google": {
             "post": {
                 "tags": [
                     "Usuarios"
                 ],
                 "summary": "Iniciar sesión con Google",
-                "operationId": "b0ba9e586e845ad6e9903af76a1643f8",
+                "operationId": "dd3e92bc3b855776ac3ded34e7ae41e4",
                 "requestBody": {
                     "required": true,
                     "content": {
